2006-04-18  Aaron Stone  <aaron@serendipity.cx>

	* modules/dbmysql.c:
	Set the current connection's collation to match the database. Prevents
	"Illegal mix of collations" errors as MySQL switches to UTF8 by default.

2006-04-18  Paul J Stevens <paul@nfg.nl>

	* Makefile.am, dbmail.h.in, forward.c, forward.h, modules/sortsieve.c, 
	  pipe.c, pipe.h:
	applying aarons fix for popen/pipe delivery (fixes: #325)
	* serverchild.c:
	catch failed forks
	* db.c, dbmail-message.c:
	add some db_free_result calls (kaname) (closes: #324)
	* sql/postgresql/create_tables.pgsql, 
	  sql/postgresql/migrate_from_2.0_to_2.1.pgsql:
	fix the postgres creation and migration scripts for 
	datefield (kaname) (closes: #328)
	* NEWS, VERSION, debian/README.Debian, debian/changelog, debian/control, 
	  debian/dbmail-dev.files, debian/dbmail-ldap.examples, 
	  debian/dbmail-ldap.files, debian/dbmail-mysql.examples, 
	  debian/dbmail-mysql.files, debian/dbmail-pgsql.examples, 
	  debian/dbmail-pgsql.files, debian/dbmail-sieve.files, 
	  debian/dbmail-sqlite.examples, debian/dbmail-sqlite.files, 
	  debian/dbmail2.2-dev.files, debian/libdbmail-ldap.examples, 
	  debian/libdbmail-ldap.files, debian/libdbmail-mysql.examples, 
	  debian/libdbmail-mysql.files, debian/libdbmail-pgsql.examples, 
	  debian/libdbmail-pgsql.files, debian/libdbmail-sieve.files, 
	  debian/libdbmail-sqlite.examples, debian/libdbmail-sqlite.files, 
	  debian/rules:
	cleaning up the debian packaging
	* debian/dbmail-mysql.examples, debian/dbmail-pgsql.examples, 
	  debian/dbmail.substvars, 
	  sql/postgresql/add_auto_replies_fields.pgsql, 
	  sql/postgresql/add_header_tables.pgsql, 
	  sql/postgresql/add_replycache.pgsql, 
	  sql/postgresql/add_sieve_tables.pgsql, 
	  sql/postgresql/add_usermap.psql, sql/postgresql/create_tables.pgsql, 
	  sql/postgresql/migrate_2.0_to_2.1.pgsql, 
	  sql/postgresql/migrate_from_2.0_to_2.1.pgsql:
	cleaning up the debian packages
	* NEWS:
	re-add empty file
	* pool.h: